[gd_scene load_steps=4 format=3 uid="uid://b3gjppwh0pdx"]

[ext_resource type="Script" path="res://main.gd" id="1_db440"]
[ext_resource type="PackedScene" uid="uid://cgrlyovgfvxj0" path="res://shape.tscn" id="2_06icl"]
[ext_resource type="PackedScene" uid="uid://b3u0qot8lkkf6" path="res://shape_generator.tscn" id="2_kdgxl"]

[node name="Main" type="Node2D"]
script = ExtResource("1_db440")

[node name="TetrisShape" parent="." instance=ExtResource("2_06icl")]

[node name="ShapeGenerator" parent="." instance=ExtResource("2_kdgxl")]

[node name="DropTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="RotationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SlowDropTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
[connection signal="timeout" from="RotationTimer" to="." method="_on_rotation_timer_timeout"]
[connection signal="timeout" from="SlowDropTimer" to="." method="_on_slow_drop_timer_timeout"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
